--- a/programs/game/Makefile
+++ b/programs/game/Makefile
@@ -10,7 +10,7 @@ CFLAGS = -Wall -Werror -g -I$(INCLUDE)
 LDFLAGS = -lm
 
 # Αρχεία .o
-OBJS = game.o $(MODULES)/state_alt.o $(MODULES)/interface.o $(MODULES)/set_utils.o $(MODULES)/vec2.o $(LIB)/k08.a $(LIB)/libraylib.a
+OBJS = game.o $(MODULES)/state.o $(MODULES)/interface.o $(MODULES)/set_utils.o $(MODULES)/vec2.o $(LIB)/k08.a $(LIB)/libraylib.a
 
 # Το εκτελέσιμο πρόγραμμα
 EXEC = game
